--- a/theme-blog/package.json
+++ b/theme-blog/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@fionawhim-site/gatsby-theme-blog",
   "author": "Fiona Hopkins",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
@@ -15,17 +15,24 @@
     "react-dom": "^16.9.0"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.16",
     "@mdx-js/mdx": "^1.3.0",
     "@mdx-js/react": "^1.3.0",
+    "@theme-ui/preset-funk": "^0.2.29",
     "fake-tag": "^1.0.0",
+    "gatsby-plugin-emotion": "^4.1.2",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-mdx": "^1.0.24",
+    "gatsby-plugin-react-helmet": "^3.1.3",
+    "gatsby-plugin-theme-ui": "^0.2.34",
     "gatsby-plugin-typescript": "^2.1.2",
-    "gatsby-source-filesystem": "^2.1.9",
     "gatsby-theme-blog-core": "^1.1.0",
-    "mkdirp": "^0.5.1"
+    "react-helmet": "^5.2.1",
+    "theme-ui": "^0.2.35"
   },
   "devDependencies": {
     "@divyenduz/ts-graphql-plugin": "^0.1.0",
+    "@types/theme-ui": "^0.2.1",
     "graphql": "^14.4.2",
     "graphql-code-generator": "^0.18.2",
     "graphql-codegen-typescript-client": "0.18.2",
