--- a/theme-blog/package.json
+++ b/theme-blog/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@fionawhim-site/gatsby-theme-blog",
   "author": "Fiona Hopkins",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
@@ -26,7 +26,9 @@
     "gatsby-plugin-react-helmet": "^3.1.3",
     "gatsby-plugin-theme-ui": "^0.2.34",
     "gatsby-plugin-typescript": "^2.1.2",
+    "gatsby-source-filesystem": "^2.1.10",
     "gatsby-theme-blog-core": "^1.1.0",
+    "mkdirp": "^0.5.1",
     "react-helmet": "^5.2.1",
     "theme-ui": "^0.2.35"
   },
