--- a/theme-blog/package.json
+++ b/theme-blog/package.json
@@ -19,6 +19,7 @@
     "@mdx-js/mdx": "^1.3.0",
     "@mdx-js/react": "^1.3.0",
     "fake-tag": "^1.0.0",
+    "gatsby-plugin-extract-schema": "^0.0.5",
     "gatsby-plugin-emotion": "^4.1.2",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-mdx": "^1.0.24",
@@ -34,10 +35,15 @@
   "devDependencies": {
     "@divyenduz/ts-graphql-plugin": "^0.1.0",
     "@types/theme-ui": "^0.2.1",
+    "@typescript-eslint/parser": "^2.0.0",
+    "eslint": "^6.1.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "graphql": "^14.4.2",
     "graphql-code-generator": "^0.18.2",
     "graphql-codegen-typescript-client": "0.18.2",
     "graphql-codegen-typescript-common": "0.18.2",
+    "prettier": "^1.18.2",
     "typescript": "^3.5.3"
   }
 }
