--- a/theme-blog/codegen.yml
+++ b/theme-blog/codegen.yml
@@ -1,5 +1,5 @@
 overwrite: true
-schema: "../demo-schema.json"
+schema: "./schema.json"
 documents:
   - ./lib/**/*.{ts,tsx}
   - ./src/**/*.{ts,tsx}
