--- a/theme-blog/package.json
+++ b/theme-blog/package.json
@@ -21,6 +21,7 @@
     "fake-tag": "^1.0.0",
     "gatsby-plugin-extract-schema": "^0.0.5",
     "gatsby-plugin-emotion": "^4.1.2",
+    "gatsby-plugin-feed": "^2.3.9",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-mdx": "^1.0.24",
     "gatsby-plugin-react-helmet": "^3.1.3",
