--- a/theme-blog/package.json
+++ b/theme-blog/package.json
@@ -18,19 +18,26 @@
     "@emotion/core": "^10.0.16",
     "@mdx-js/mdx": "^1.3.0",
     "@mdx-js/react": "^1.3.0",
+    "emotion-reset": "^2.0.2",
     "fake-tag": "^1.0.0",
-    "gatsby-plugin-extract-schema": "^0.0.5",
     "gatsby-plugin-emotion": "^4.1.2",
+    "gatsby-plugin-extract-schema": "^0.0.5",
     "gatsby-plugin-feed": "^2.3.9",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-mdx": "^1.0.24",
     "gatsby-plugin-react-helmet": "^3.1.3",
+    "gatsby-plugin-sitemap": "^2.2.9",
     "gatsby-plugin-theme-ui": "^0.2.34",
     "gatsby-plugin-typescript": "^2.1.2",
+    "gatsby-remark-images": "^3.1.19",
+    "gatsby-remark-copy-linked-files": "^2.1.13",
+    "gatsby-remark-smartypants": "^2.1.5",
+    "gatsby-remark-responsive-iframe": "^2.2.10",
     "gatsby-source-filesystem": "^2.1.10",
     "gatsby-theme-blog-core": "^1.1.0",
     "mkdirp": "^0.5.1",
     "react-helmet": "^5.2.1",
+    "remark-slug": "^5.1.2",
     "theme-ui": "^0.2.36"
   },
   "devDependencies": {
