--- a/theme-blog/tsconfig.build.json
+++ b/theme-blog/tsconfig.build.json
@@ -6,6 +6,7 @@
     "target": "es2018",
     "module": "commonjs",
     "noEmit": false,
+    "sourceMap": true,
     "declaration": true,
     "noImplicitUseStrict": true,
     "esModuleInterop": true,
