--- a/theme-blog/package.json
+++ b/theme-blog/package.json
@@ -19,6 +19,8 @@
     "@mdx-js/mdx": "^1.3.0",
     "@mdx-js/react": "^1.3.0",
     "emotion-reset": "^2.0.2",
+    "emotion": "^10.0.17",
+    "emotion-server": "^10.0.17",
     "fake-tag": "^1.0.0",
     "gatsby-plugin-emotion": "^4.1.2",
     "gatsby-plugin-extract-schema": "^0.0.5",
