--- a/theme-blog/package.json
+++ b/theme-blog/package.json
@@ -25,7 +25,7 @@
     "gatsby-plugin-emotion": "^4.1.2",
     "gatsby-plugin-extract-schema": "^0.0.5",
     "gatsby-plugin-feed": "^2.3.9",
-    "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-google-fonts": "fionawhim/gatsby-plugin-google-fonts#crossorigin-prefetch",
     "gatsby-plugin-mdx": "^1.0.24",
     "gatsby-plugin-react-helmet": "^3.1.3",
     "gatsby-plugin-sitemap": "^2.2.9",
