--- a/theme-blog/tsconfig.build.json
+++ b/theme-blog/tsconfig.build.json
@@ -12,5 +12,6 @@
     "esModuleInterop": true,
     "alwaysStrict": false
   },
-  "include": ["lib/**/*"]
+  "include": ["lib/**/*"],
+  "exclude": ["lib/gatsby-browser.*", "lib/gatsby-ssr.*"]
 }
