--- a/theme-blog/package.json
+++ b/theme-blog/package.json
@@ -28,10 +28,11 @@
     "gatsby-plugin-google-fonts": "fionawhim/gatsby-plugin-google-fonts#crossorigin-prefetch",
     "gatsby-plugin-mdx": "^1.0.24",
     "gatsby-plugin-react-helmet": "^3.1.3",
+    "gatsby-plugin-sharp": "^2.2.21",
     "gatsby-plugin-sitemap": "^2.2.9",
     "gatsby-plugin-theme-ui": "^0.2.34",
     "gatsby-plugin-typescript": "^2.1.2",
-    "gatsby-remark-images": "^3.1.19",
+    "gatsby-remark-images": "file:vendor/gatsby-remark-images-v3.1.21.tgz",
     "gatsby-remark-copy-linked-files": "^2.1.13",
     "gatsby-remark-prismjs": "^3.2.7",
     "gatsby-remark-smartypants": "^2.1.5",
