--- a/theme-blog/package.json
+++ b/theme-blog/package.json
@@ -31,6 +31,7 @@
     "gatsby-plugin-sharp": "^2.2.21",
     "gatsby-plugin-sitemap": "^2.2.9",
     "gatsby-plugin-theme-ui": "^0.2.34",
+    "gatsby-plugin-twitter": "2.0.13",
     "gatsby-plugin-typescript": "^2.1.2",
     "gatsby-remark-images": "file:vendor/gatsby-remark-images-v3.1.21.tgz",
     "gatsby-remark-copy-linked-files": "^2.1.13",
