--- a/theme-blog/package.json
+++ b/theme-blog/package.json
@@ -22,6 +22,7 @@
     "emotion": "^10.0.17",
     "emotion-server": "^10.0.17",
     "fake-tag": "^1.0.0",
+    "firebase-admin": "^8.8.0",
     "gatsby-plugin-emotion": "^4.1.2",
     "gatsby-plugin-extract-schema": "^0.0.5",
     "gatsby-plugin-feed": "^2.3.9",
@@ -33,18 +34,20 @@
     "gatsby-plugin-theme-ui": "^0.2.34",
     "gatsby-plugin-twitter": "2.0.13",
     "gatsby-plugin-typescript": "^2.1.2",
-    "gatsby-remark-images": "file:vendor/gatsby-remark-images-v3.1.21.tgz",
+    "gatsby-remark-images": "file:vendor/gatsby-remark-images-v3.1.34.tgz",
     "gatsby-remark-copy-linked-files": "^2.1.13",
     "gatsby-remark-prismjs": "^3.2.7",
     "gatsby-remark-smartypants": "^2.1.5",
     "gatsby-remark-responsive-iframe": "^2.2.10",
     "gatsby-source-filesystem": "^2.1.10",
-    "gatsby-theme-blog-core": "^1.1.0",
+    "gatsby-theme-blog-core": "^1.0.31",
+    "gatsby-transformer-sharp": "2.3.4",
     "mkdirp": "^0.5.1",
     "prismjs": "^1.17.1",
     "react-helmet": "^5.2.1",
     "remark-slug": "^5.1.2",
-    "theme-ui": "^0.2.36"
+    "theme-ui": "^0.2.36",
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
     "@divyenduz/ts-graphql-plugin": "^0.1.0",
@@ -53,6 +56,7 @@
     "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react-hooks": "2.3.0",
     "graphql": "^14.4.2",
     "graphql-code-generator": "^0.18.2",
     "graphql-codegen-typescript-client": "0.18.2",
