--- a/theme-blog/package.json
+++ b/theme-blog/package.json
@@ -34,7 +34,7 @@
     "gatsby-plugin-theme-ui": "^0.2.34",
     "gatsby-plugin-twitter": "2.0.13",
     "gatsby-plugin-typescript": "^2.1.2",
-    "gatsby-remark-images": "file:vendor/gatsby-remark-images-v3.1.34.tgz",
+    "gatsby-remark-images": "^3.1.34",
     "gatsby-remark-copy-linked-files": "^2.1.13",
     "gatsby-remark-prismjs": "^3.2.7",
     "gatsby-remark-smartypants": "^2.1.5",
