--- a/theme-blog/package.json
+++ b/theme-blog/package.json
@@ -34,11 +34,12 @@
     "gatsby-plugin-theme-ui": "^0.2.34",
     "gatsby-plugin-twitter": "2.0.13",
     "gatsby-plugin-typescript": "^2.1.2",
-    "gatsby-remark-images": "^3.1.34",
+    "gatsby-remark-images": "^3.1.42",
     "gatsby-remark-copy-linked-files": "^2.1.13",
     "gatsby-remark-prismjs": "^3.2.7",
     "gatsby-remark-smartypants": "^2.1.5",
     "gatsby-remark-responsive-iframe": "^2.2.10",
+    "gatsby-remark-videos": "^0.3.5",
     "gatsby-source-filesystem": "^2.1.10",
     "gatsby-theme-blog-core": "^1.0.31",
     "gatsby-transformer-sharp": "2.3.4",
