--- a/theme-blog/package.json
+++ b/theme-blog/package.json
@@ -10,58 +10,61 @@
     "graphql-types": "gql-gen --config codegen.yml"
   },
   "peerDependencies": {
-    "gatsby": "^2.13.67",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "gatsby": "^3.0.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
   },
   "dependencies": {
     "@emotion/core": "^10.0.16",
-    "@mdx-js/mdx": "^1.3.0",
-    "@mdx-js/react": "^1.3.0",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "emotion-reset": "^2.0.2",
-    "emotion": "^10.0.17",
-    "emotion-server": "^10.0.17",
+    "@emotion/cache": "^11.0.0",
+    "@emotion/css": "^11.0.0",
+    "@emotion/react": "^11.0.0",
+    "@emotion/server": "^11.0.0",
     "fake-tag": "^1.0.0",
     "firebase-admin": "^8.8.0",
-    "gatsby-plugin-emotion": "^4.1.2",
-    "gatsby-plugin-extract-schema": "^0.0.5",
-    "gatsby-plugin-feed": "^2.3.9",
+    "gatsby-plugin-emotion": "^6.0.0",
+    "gatsby-plugin-extract-schema": "^0.2.0",
+    "gatsby-plugin-feed": "^3.0.0",
     "gatsby-plugin-google-fonts": "fionawhim/gatsby-plugin-google-fonts#crossorigin-prefetch",
-    "gatsby-plugin-mdx": "^1.0.24",
-    "gatsby-plugin-react-helmet": "^3.1.3",
-    "gatsby-plugin-sharp": "^2.2.21",
-    "gatsby-plugin-sitemap": "^2.2.9",
-    "gatsby-plugin-theme-ui": "^0.2.34",
-    "gatsby-plugin-twitter": "2.0.13",
-    "gatsby-plugin-typescript": "^2.1.2",
-    "gatsby-remark-images": "^3.1.42",
-    "gatsby-remark-copy-linked-files": "^2.1.13",
-    "gatsby-remark-prismjs": "^3.2.7",
-    "gatsby-remark-smartypants": "^2.1.5",
-    "gatsby-remark-responsive-iframe": "^2.2.10",
-    "gatsby-source-filesystem": "^2.1.10",
-    "gatsby-theme-blog-core": "^1.0.31",
-    "gatsby-transformer-sharp": "2.3.4",
+    "gatsby-plugin-mdx": "^2.2.0",
+    "gatsby-plugin-react-helmet": "^4.0.0",
+    "gatsby-plugin-sharp": "^3.2.1",
+    "gatsby-plugin-sitemap": "^4.0.0",
+    "gatsby-plugin-theme-ui": "^0.11.0",
+    "gatsby-plugin-twitter": "^3.0.0",
+    "gatsby-plugin-typescript": "^3.0.0",
+    "gatsby-remark-images": "^4.2.0",
+    "gatsby-remark-copy-linked-files": "^3.2.0",
+    "gatsby-remark-prismjs": "^6.0.0",
+    "gatsby-remark-smartypants": "^3.2.0",
+    "gatsby-remark-responsive-iframe": "^5.0.0",
+    "gatsby-source-filesystem": "^3.2.0",
+    "gatsby-theme-blog-core": "^3.0.0",
+    "gatsby-transformer-sharp": "^3.2.0",
     "mkdirp": "^0.5.1",
-    "prismjs": "^1.17.1",
-    "react-helmet": "^5.2.1",
-    "remark-slug": "^5.1.2",
-    "theme-ui": "^0.2.36",
-    "whatwg-fetch": "^3.0.0"
+    "prismjs": "^1.25.0",
+    "react-helmet": "^6.1.0",
+    "remark-slug": "^7.0.0",
+    "theme-ui": "^0.11.3",
+    "trim-right": "^1.0.0",
+    "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
     "@divyenduz/ts-graphql-plugin": "^0.1.0",
-    "@types/theme-ui": "^0.2.1",
-    "@typescript-eslint/parser": "^2.0.0",
-    "eslint": "^6.1.0",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react-hooks": "2.3.0",
-    "graphql": "^14.4.2",
-    "graphql-code-generator": "^0.18.2",
-    "graphql-codegen-typescript-client": "0.18.2",
-    "graphql-codegen-typescript-common": "0.18.2",
-    "prettier": "^1.18.2",
-    "typescript": "^3.5.3"
+    "@types/node": "^16.11.4",
+    "@types/theme-ui": "^0.6.0",
+    "@typescript-eslint/parser": "^5.1.0",
+    "eslint": "^8.1.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "graphql": "^15.0.0",
+    "@graphql-codegen/cli": "^1.0.0",
+    "@graphql-codegen/typescript": "^1.0.0",
+    "@graphql-codegen/typescript-operations": "^1.0.0",
+    "prettier": "^2.4.1",
+    "typescript": "^4.4.0"
   }
 }
