--- a/theme-blog/tsconfig.build.json
+++ b/theme-blog/tsconfig.build.json
@@ -3,13 +3,14 @@
   "compilerOptions": {
     "outDir": "build",
     "rootDir": "lib",
-    "target": "es2018",
+    "target": "es6",
     "module": "commonjs",
     "noEmit": false,
     "sourceMap": true,
     "declaration": true,
     "noImplicitUseStrict": true,
     "esModuleInterop": true,
+    "isolatedModules": true,
     "alwaysStrict": false
   },
   "include": ["lib/**/*"],
